# lambda-lattice

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: echo_numgame_gemma.json  echo_numgame_gemma_rep.json  echo_numgame_gptoss.json  echo_numgame_llama.json  echo_numgame_llama_rep.json  echo_numgame_mistral.json  echo_numgame_mistral_rep.json  echo_numgame_mockcheck.json  echo_numgame_olmo.json  echo_numgame_olmo_rep.json  echo_numgame_q8.json  echo_numgame_q8_rep.json  echo_think_c2_direct.json  echo_think_c2_meet.json  echo_think_c_direct.json  echo_think_c_meet.json  echo_think_d2_sizep.json  echo_think_d_sizep.json  echo_think_gptoss20b.json  echo_think_gptoss_e.json  echo_think_qwen25_14b.json  echo_think_qwen3_14b.json  echo_think_qwen3_32b.json  echo_think_qwen3_8b.json  echo_think_qwen3_8b_meetinstr_v2.json  echo_think_qwen3_8b_v2.json  echo_think_r1d14b_v2.json  jbias_big.json  jbias_gcm_test.json  jbias_gcm_verdict.json  jbias_k4.json  jbias_k4_32b.json  jbias_k4_7b_base.json  jbias_k4_7b_f3.json  jbias_k4_gemma.json  jbias_k4_llama.json  jbias_k4_mistral.json  jbias_k4_olmo.json  jbias_k5.json  jbias_qwen_small.json  (+2 more)
figures/: NOTES.md
paper/: README.md  paper.md
preregistrations/: PREREGISTRATION.md  PREREGISTRATION_NUMGAME.md  PREREGISTRATION_REASONING.md  README.md
src/lambda_lattice/: __init__.py  _paths.py  cli.py  references.py
src/lambda_lattice/boolean/: __init__.py  harness.py  reasoning.py
src/lambda_lattice/figures/: __init__.py  loader.py  make_f10.py  make_f11_f13_f14.py  make_f12.py  make_figures.py  refs.py  style.py
src/lambda_lattice/numbers/: __init__.py  harness.py
tests/: test_cli.py  test_figure_builders.py  test_mock_oracles.py  test_references.py
(+5 files in other folders)
